# agentic-ni

./: .env.example  .gitignore  README.impl.md  README.md  README.output.md  README.src.md  instruction.md  presentation_slides.md  pyproject.toml  requirements-network.txt  requirements.txt  scratch.txt
configs/demo/: R1.cfg  R2.cfg  ip_ledger.csv  ip_ledger.md  routing_design.md  topology.yaml
configs/demo2/: R1.cfg  R2.cfg  R3.cfg  topology.yaml
configs/demo3/: topology.yaml
configs/static/: Host1.cfg  Host2.cfg  R1.cfg  R2.cfg  ip_ledger.csv  ip_ledger.md  routing_design.md  topology.yaml
inventory/: demo.yaml
prompts/: fault_simulator_system.md  troubleshooter_system.md
prompts/demo/: validator.md
prompts/demo2/: architect.md  validator.md
prompts/demo3/: architect.md
prompts/static/: architect.md  requirement.md
rag/: bgp_guide.md  cml_design_guide.md  ios_variants_guide.md  ospf_guide.md  vlan_l2_guide.md
reports/: demo-20260715_103805.md  demo-analyze-20260715_180324.md  demo-improve-20260715_112647.md  demo2-20260715_111050.md
src/agentic_ni/: __init__.py  graph.py  llm.py  logger.py  state.py
src/agentic_ni/agents/: analyzer.py  architect.py  (+4 more)
tests/: test_analyzer.py  test_architect.py  test_cml_tools.py  test_design_docs.py  test_e2e.py  test_fault_simulator.py  test_graph.py  test_human_confirm_live.py  test_live_apply.py  test_live_e2e.py  test_live_precheck.py  test_live_report.py  test_live_verify.py  test_llm.py  test_pyats_live_backend.py  test_pyats_tools.py  test_rag_knowledge.py  test_troubleshooter.py  test_validator.py
(+20 files in other folders)
